# AlVolant

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALLATION.md  PHASE_2_STATUS.md  README.md  README_cat.md  docker-compose.yml  dump_route_data.py  install-ios.sh  pyproject.toml  run-local.sh  verify_bff_server.py
app/: __init__.py  config.py  main.py  server.py
app-conductor/: .env.example  App.tsx  app.json  index.ts  package-lock.json  package.json
app-conductor/plugins/: withIconComposer.js  withLocalLiveActivities.js
app-conductor/src/: PreferencesContext.tsx  i18n.ts  theme.ts
app-conductor/widgets/: RouteLiveActivity.tsx
app/api/: health.py  satellite.py
app/cache/: __init__.py  redis_manager.py
app/core/: __init__.py  auth.py  exceptions.py  logging.py  rate_limiter.py  security.py  telemetry.py
app/models/: __init__.py  atm_rt.py  gtfs.py  ibus.py  telemetry.py  (+1 more)
deploy/: Caddyfile  maps.martin.yaml  org.alvolant.maps.plist  satellite-esri.json
docs/: PRIVACY.md  REMOTE_TESTING.md
maps/: NOTICE.md  martin.local.yaml  nginx.local.conf
scripts/: build_unsigned_ipa.sh  telemetry_report.py
tests/: __init__.py  conftest.py  test_api_limits.py  test_atm_rt_hardening.py  test_auth.py  test_cache.py  test_gtfs_deduplicated_cache.py  test_gtfs_download_hardening.py  test_gtfs_proximity.py  test_health_readiness.py  test_production_config.py  test_rate_limiter.py  test_relief_matching.py  test_satellite_tiles.py  test_security_middleware.py  test_telemetry.py  test_tmb_ibus_service.py  test_traffic_hardening.py  test_ws_live_updates.py
(+37 files in other folders)
