[project]
name = "route-tmb-bff"
version = "0.1.0"
description = "Backend-for-Frontend server for the Barcelona bus driver situational awareness tablet app"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "redis[hiredis]>=5.2.0,<6.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "gtfs-realtime-bindings>=1.0.0,<2.0.0",
    "orjson>=3.10.0,<4.0.0",
    "websockets>=14.0,<15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "fakeredis[json]>=2.26.0,<3.0.0",
    "ruff>=0.8.0,<1.0.0",
    "coverage>=7.6.0,<8.0.0",
    "pillow>=12.0.0,<13.0.0",
]

[dependency-groups]
build = ["hatchling==1.31.0"]

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]
